# math-eval

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  evaluation_benchmark.rs
src/: asm.rs  builder.rs  lib.rs  number.rs  optimizations.rs  postfix_tree.rs  quick_expr.rs  syntax.rs  token_stream.rs  token_tree.rs  tokenizer.rs  tree_construct.rs  tree_utils.rs  trie.rs
src/number/: libm_ext.rs  primitives.rs  std_float.rs  std_int.rs
src/postfix_tree/: subtree_collection.rs  tree_iterators.rs
src/syntax/: grammar.rs  shunting_yard.rs  token_fragmentation.rs
tests/: correctness.rs  fuzz.rs  integration_test.rs
tests/common/: mod.rs
