[package]
name = "math-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
indextree = "=4.6.0"
nom = "7.1.3"
num-traits = { version = "0.2.19", optional = true }
seq-macro = "0.3.5"
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.5.0"
fastrand = "2.0.1"
meval = "0.2.0"

[lints.clippy]
redundant_closure_call = "allow"
type_complexity = "allow"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[[bench]]
name = "bench"
harness = false

[features]
default = []
num-traits = ["dep:num-traits"]
