[package]
name = "math-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2.19", optional = true }
seq-macro = "0.3.5"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.0"
fastrand = "2.0.1"
meval = "0.2.0"

[lints.clippy]
redundant_closure_call = "allow"
type_complexity = "allow"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[[bench]]
name = "bench"
harness = false

[features]
default = []
num-traits = ["dep:num-traits"]
